# routes/articles.js
@@ -15,10 +15,10 @@ router.get('/article/:id', async (req, res, next) => {
     }
 });
 
-router.get('/article/authorId/:id', async (req, res, next) => {
+router.get('/article/authorId/:scholar_id', async (req, res, next) => {
     try {
-        const { id } = req.params;
-        const article = await Article.find({'author_id' : id});
+        const { scholar_id } = req.params;
+        const article = await Article.find({'scholar_id' : scholar_id});
         if (article.length === 0) {
             return res.status(404).json({ error: 'Article not found' });
         }
